# attention_system

./: README.md
attention_system/: CMakeLists.txt  README.md  package.xml
attention_system/config/: params.yaml
attention_system/include/attention_system/: AttentionServerNode.hpp  OptimizedAttentionServerNode.hpp  PIDController.hpp  RoundRobinAttentionServerNode.hpp  SimpleAttentionServerNode.hpp
attention_system/include/attention_system/behavior_tree_nodes/: Scan.hpp  Track.hpp
attention_system/launch/: attention.launch.py  exp3.commands
attention_system/params/: attention_config.yaml
attention_system/src/: attention_server.cpp
attention_system/src/attention_system/: AttentionServerNode.cpp  OptimizedAttentionServerNode.cpp  PIDController.cpp  RoundRobinAttentionServerNode.cpp  SimpleAttentionServerNode.cpp
attention_system/src/behavior_tree_nodes/: Scan.cpp  Track.cpp
attention_system/tests/: test_attention.cpp
attention_system_msgs/: CMakeLists.txt  package.xml
attention_system_msgs/msg/: AttentionCommand.msg  AttentionPoints.msg
gb_attention/: CMakeLists.txt  package.xml
gb_attention/include/gb_attention/: AttentionClientNode.hpp  AttentionServerNode.hpp  OptimizedAttentionServerNode.hpp  RoundRobinAttentionServerNode.hpp  SimpleAttentionServerNode.hpp
gb_attention/include/gb_attention/behavior_tree_nodes/: Scan.hpp  Track.hpp
gb_attention/launch/: attention.launch.py  exp1.commands  exp2.commands
gb_attention/src/: attention_client.cpp  attention_manager.cpp  attention_server.cpp
gb_attention/src/behavior_tree_nodes/: Scan.cpp  Track.cpp
gb_attention/src/gb_attention/: AttentionClientNode.cpp  AttentionServerNode.cpp  OptimizedAttentionServerNode.cpp  RoundRobinAttentionServerNode.cpp  SimpleAttentionServerNode.cpp
gb_attention/tests/: CMakeLists.txt  test_attention.cpp
gb_attention_msgs/: CMakeLists.txt  package.xml
