<?xml version="1.0"?>
<package format="3">
  <name>gb_attention_msgs</name>
  <version>0.0.1</version>
  <description>The gb_attention_msgs package</description>

  <maintainer email="fmrico@gmail.com">Francisco Martín</maintainer>

  <license>BSD</license>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>rosidl_default_generators</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
